--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
+    "bootstrap5": "^1.1.9",
     "json-server": "^1.0.0-beta.3",
     "vue": "^3.5.13"
   },
